create slide show

--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -276,7 +276,7 @@ color: #232020;
 
     width: 358px;
     height: 680px;
-    background-color: #E0E0E0;
+    /* background-color: #E0E0E0; */
 }
 
 
