--- a/src/components/Body/Guide/slideshow.style.css
+++ b/src/components/Body/Guide/slideshow.style.css
@@ -24,12 +24,12 @@
 .prev,
 .next {
     cursor: pointer;
-    position: absolute;
+    position: relative;
     top: 50%;
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: #9d9d9d;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -60,20 +60,20 @@
     text-align: center;
 }
 
-/* Number text (1/3 etc)
+/* Number text (1/3 etc) */
 .numbertext {
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
-} */
+}
 
 /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: calc(15rem/16);
+    width:  calc(15rem/16);
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
