--- a/src/components/Body/Guide/slideshow.style.css
+++ b/src/components/Body/Guide/slideshow.style.css
@@ -24,8 +24,7 @@
 .prev,
 .next {
     cursor: pointer;
-    position: relative;
-    top: 50%;
+    /* position: relative; */
     width: auto;
     padding: 16px;
     margin-top: -22px;
