--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -274,8 +274,8 @@ color: #232020;
 
 .guide-steps-img {
 
-    width: 358px;
-    height: 680px;
+    width: calc(358rem/16);
+    height: calc(680rem/16);
     display: flex;
     align-items: center;
     /* background-color: #E0E0E0; */
