--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -305,6 +305,11 @@ color: #232020;
     padding: calc(24rem/16);
     margin-top: 20px;
 }
+
+.question-container[show = 'false'] {
+    display: none;
+}
+
 .question-q {
     display: flex;
     flex-direction: row-reverse;
