fix hook + emu fetch API

--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -207,7 +207,7 @@ color: #232020;
 }
 .guide-steps{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .guide-steps-text {
