--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -77,14 +77,18 @@ nav a:hover {
         position: absolute;
         top: calc(90px + 1rem);
         left: 0px;
+        width: 45%;
        
+    }
+    .header-container nav a {
+        font-size: 2rem;
     }
     .nav-list {
         margin-left: 0;
         flex-direction: column;
         background-color: #ffffff; 
         border-radius: 0px 8px 8px 0px;
-        padding-bottom: 90px;
+        padding-bottom: 30px;
         padding-top: 12px;
     }
     .header-container nav ul {
@@ -95,6 +99,7 @@ nav a:hover {
         font-family: 'SF UI Display';
         margin: 0;
         padding: 20px 24px;
+        padding-right: 5px;
     }
 
     .nav-list li:hover{
